[project]
name = "accessdirectory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "json-log-formatter==1.0",
    "pillow==10.1.0",
    "pypng==0.20220715.0",
    "python-dotenv>=1.1.1",
    "python-magic>=0.4.27",
    "requests>=2.32.5",
    "six==1.16.0",
]
