[project]
name = "tunnelvision-static"
version = "0.1.0"
description = "A static site version of a TunnelVision style catalog, built with Pelican"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "markdown>=3.10.1",
    "pelican>=4.11.0.post0",
    "pelican-photos>=1.6.2",
    "pillow==10.1.0",
]
